# yappr

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh  pyproject.toml  setup.py
.github/workflows/: release.yml
docs/: RUST_REWRITE_HANDOFF.md  configuration.md  index.html
packaging/homebrew/: yappr.rb.template
resources/: AppIcon.icns  Info.plist  config.default.ini
resources/assets/models/: silero_vad.int8.onnx
scripts/: build_app.sh  make_cert.sh  make_icons.py  package_app.sh  run.sh  serve.sh  yappr_main.py
src/: app.rs  audio.rs  chat.rs  config.rs  hotkey.rs  inject.rs  instance.rs  logger.rs  main.rs  mascot.rs  perms.rs  runtime.rs  search.rs  server.rs  speech.rs  ui.rs  vad.rs
src/yappr/: __init__.py  app.py  config.default.ini  engine_install.sh
